cat factory example

--- a/01-javascript/objects/index.html
+++ b/01-javascript/objects/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <script src="js/ex3.js"></script>
+    <script src="js/cats.js"></script>
   </head>
   <body>
     <h2>Please open the console to see the output</h2>
