--- a/02-html-css/positioning/index.html
+++ b/02-html-css/positioning/index.html
@@ -8,10 +8,89 @@
 <body>
 
   <div class="container">
-    <h1>CSS Postioning Demo</h1>
 
+    <h1>CSS Postioning Demo</h1>
     <div class="box">default</div>
 
+    <h2>Relative Position</h2>
+    <div class="box relative">
+      relative
+      <div class="smallbox abs1"></div>
+      <div class="smallbox abs2"></div>
+      <div class="smallbox abs3"></div>
+      <div class="smallbox abs4"></div>
+    </div>
+
+    <h2>Absolute Position</h2>
+    <div class="box absolute">absolute</div>
+
+    <h2>Fixed Position</h2>
+    <div class="box fixed">fixed</div>
+
+    <div class="newsbox">
+      <h2>Rdio files for bankruptcy</h2>
+      <img src="http://fillmurray.com/100/150">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis consectetur minima temporibus suscipit obcaecati, quasi laborum nisi. Velit laborum accusantium nihil ratione dicta, at porro, minus, voluptatibus voluptatum ex necessitatibus! Aut enim tempore sequi facere, dolorem magni fugit incidunt hic asperiores suscipit. Adipisci placeat aperiam, quo. Repudiandae hic, dolorem accusantium porro impedit cupiditate beatae explicabo dolorum vitae nihil nemo delectus!</p>
+    </div>
+
+    <div class="newsbox">
+      <h2>Rdio files for bankruptcy</h2>
+      <img src="http://fillmurray.com/100/150">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis consectetur minima temporibus suscipit obcaecati, quasi laborum nisi. Velit laborum accusantium nihil ratione dicta, at porro, minus, voluptatibus voluptatum ex necessitatibus! Aut enim tempore sequi facere, dolorem magni fugit incidunt hic asperiores suscipit. Adipisci placeat aperiam, quo. Repudiandae hic, dolorem accusantium porro impedit cupiditate beatae explicabo dolorum vitae nihil nemo delectus!</p>
+    </div>
+
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam, sunt, blanditiis? Quod quaerat architecto voluptates voluptatibus labore, sit neque autem nihil, porro soluta? Hic consequuntur, iste reiciendis reprehenderit quia inventore?</p>
+    <p>Molestias iure velit iste esse, voluptates necessitatibus. Illum eveniet inventore, enim libero quae. Mollitia et alias molestiae facere officiis repudiandae nemo deserunt expedita, dolorum eos aspernatur iusto cumque dolores, autem.</p>
+    <p>Aliquam perspiciatis vitae et, totam, dicta id atque error quod ullam ducimus veniam eos ex deleniti! Totam consequuntur, doloribus ea accusantium facilis quidem aliquam ullam placeat laboriosam. Odio adipisci, voluptas!</p>
+    <p>Soluta maxime, tenetur iste laboriosam tempora quisquam quia iusto, doloremque odit maiores! Nobis eaque ex adipisci molestias quam quo sed quisquam repellat nostrum quibusdam, dolorum enim, quas repellendus cumque ad.</p>
+    <p>Rerum consectetur placeat molestiae qui similique eos voluptas libero error atque ut, neque ducimus quam, alias et iure ad tempore impedit cumque sit recusandae. Quis molestiae voluptatem, voluptates incidunt accusamus.</p>
+    <p>Molestias, veniam. Excepturi dolorem, doloremque recusandae, quod quos pariatur! Dolore necessitatibus accusantium natus, consequuntur saepe error quaerat quibusdam quasi, minus deleniti pariatur sint assumenda voluptatem quis molestiae tempora ab repudiandae.</p>
+    <p>Eius nesciunt molestias unde odit sunt, voluptate dicta, corporis totam facilis neque repudiandae. Veritatis delectus quibusdam aut, praesentium, sit culpa tempora consequuntur at unde. Error quis expedita inventore, incidunt iste?</p>
+    <p>Repudiandae odit laudantium iure officiis aperiam architecto, ab ipsum hic nam explicabo totam recusandae voluptas quod assumenda aliquid vero atque dicta, iste nostrum vel doloribus. Optio obcaecati minus quos excepturi.</p>
+    <p>Quidem ipsum esse laboriosam rem iure aperiam sed quis placeat perspiciatis ex perferendis dolore repudiandae, et quia voluptatum iusto nobis earum consequuntur nam. Fugiat veniam, dignissimos. Obcaecati molestias repellat aperiam!</p>
+    <p>Accusantium minima natus, iure! Ipsum temporibus voluptate reiciendis eum sapiente explicabo, est maiores officia ipsa. Eveniet excepturi tempore laudantium nulla ducimus blanditiis recusandae dicta aliquid, in quas. In, deserunt veniam.</p>
+    <p>Porro ab, placeat deleniti, omnis facere sapiente non aut autem voluptate dolorum quos accusamus mollitia ullam reiciendis est esse? Autem fugiat quidem nemo unde asperiores soluta, officiis maiores distinctio modi!</p>
+    <p>Porro incidunt beatae quis perferendis voluptatum animi dolorum nulla. Tempora provident nulla vitae, illo aspernatur sit aliquid! Dicta sit, laborum sequi nemo, impedit assumenda odio dignissimos est nostrum, ducimus totam.</p>
+    <p>Obcaecati porro, voluptates tempore fuga repellendus tenetur similique pariatur numquam saepe quas veniam doloremque officiis ullam cumque vitae distinctio quia laboriosam ipsa, quaerat accusantium eos explicabo rerum enim omnis. Adipisci!</p>
+    <p>Vitae illo, quaerat natus reprehenderit soluta eveniet impedit debitis? Aut porro quis nesciunt asperiores itaque libero magnam, molestias neque nisi dolore, consequatur ullam, nulla est perspiciatis voluptatum unde repellendus eaque.</p>
+    <p>Error hic quia placeat, nostrum tempore. Saepe excepturi officiis eligendi explicabo ut rerum architecto magni minus, molestiae laboriosam, nobis aspernatur alias! Quidem voluptates recusandae deleniti quasi provident minima, odit saepe?</p>
+    <p>Perspiciatis nobis, numquam dolore nemo corporis, voluptatibus temporibus animi sequi quia laboriosam dolorum labore natus vitae eum facilis alias odit voluptas exercitationem fugit, incidunt laborum cum nesciunt? A, dolorum, necessitatibus.</p>
+    <p>Optio placeat accusamus sit et dolorum! Voluptates saepe quas quibusdam laudantium molestiae aut ex voluptatum dolorum, consectetur cupiditate doloremque, ad necessitatibus facere velit nihil tempore voluptatem. Quidem, repellat sequi architecto.</p>
+    <p>Exercitationem mollitia ex eius iure voluptatem officiis tenetur reprehenderit dolores illo necessitatibus, a sapiente aliquid, rerum laudantium incidunt. Inventore nam repudiandae iste dolor cumque tenetur doloremque. Doloribus illum perspiciatis corporis.</p>
+    <p>Nobis distinctio non perspiciatis culpa sint, ratione, laboriosam, itaque beatae debitis veritatis quo eos a voluptate deserunt possimus illo quia quisquam vero dolor! Omnis laudantium aliquid numquam totam cum ipsa.</p>
+    <p>Quas ex assumenda architecto dolor earum commodi perferendis aut optio rem culpa itaque temporibus eveniet, dolores, accusamus nulla ipsam doloremque, vitae et explicabo, labore. Ipsam praesentium officia ullam, accusamus sunt.</p>
+    <p>Animi unde quisquam reprehenderit ipsa quaerat aliquam consequatur in deleniti natus laboriosam, aspernatur odio totam vero voluptas praesentium cupiditate officiis blanditiis, veniam eius distinctio fugiat quae eveniet illo, facilis ipsam.</p>
+    <p>Quo libero ullam, officiis earum, tempora quam porro debitis facere nemo natus delectus corporis tempore placeat doloribus ad facilis, quas quibusdam. Nisi animi aspernatur repellat vel sed culpa aperiam perferendis!</p>
+    <p>Ducimus excepturi repudiandae tempora possimus eos dicta iure recusandae et nemo. Explicabo sed, quas autem praesentium voluptas recusandae cupiditate dolor dicta, unde laboriosam qui facilis. Perferendis corrupti impedit nobis perspiciatis!</p>
+    <p>Est ratione, unde. Fuga ex saepe facilis unde doloremque rerum officia laudantium voluptatibus repellat? Adipisci fuga totam a impedit commodi dolores quaerat et rem vero aliquid, tempore iusto incidunt nesciunt?</p>
+    <p>Error, ex, odio. Corporis, recusandae. Obcaecati quis dignissimos dolorem, veniam, sequi repellendus nulla iure magnam accusantium quaerat doloremque voluptatibus, voluptas! Cupiditate nihil doloribus amet minima necessitatibus a quasi, recusandae incidunt!</p>
+    <p>Quibusdam ducimus minus ex delectus eius consequuntur laborum est doloremque a aut vel quidem aliquam illo modi, quasi ea numquam totam facere voluptatibus, at, quas iure excepturi facilis. Eos, culpa.</p>
+    <p>Ullam quas enim accusamus suscipit velit laboriosam quam optio ipsam praesentium quis corporis nostrum debitis incidunt mollitia alias, non adipisci eum fugiat, accusantium hic quia nulla blanditiis nam qui minus?</p>
+    <p>Maxime aperiam, culpa a, dolores sint maiores fugit officia mollitia illo dolore necessitatibus quas excepturi ut optio facilis perspiciatis earum iure delectus enim corporis provident voluptatem facere non. Perspiciatis, nemo!</p>
+    <p>Excepturi in placeat pariatur fugit et enim quos soluta labore hic adipisci eius repellat, natus ex quod dolorum expedita facere! Animi minima exercitationem omnis voluptatibus illum suscipit, impedit cumque repudiandae!</p>
+    <p>Quod nihil sint quam voluptatem a, in provident officia, vero aut quo, amet expedita ab recusandae culpa velit, deserunt cum minima. Blanditiis, optio! Non omnis, excepturi magnam beatae aut, mollitia.</p>
+    <p>Quam tempora quaerat harum numquam doloremque, assumenda officiis, optio excepturi omnis officia ratione illum ut mollitia iure vero esse? Possimus animi sint non reprehenderit fuga. Quia saepe ut nesciunt, laboriosam!</p>
+    <p>Maiores, veniam pariatur deleniti vero, distinctio sequi non tempora ab quis repudiandae quaerat recusandae, minima quibusdam totam suscipit molestias nulla modi porro nisi reprehenderit cum quisquam quasi iste. Voluptatum, excepturi.</p>
+    <p>Consectetur laboriosam excepturi quis numquam? Inventore voluptates, quibusdam accusantium voluptatibus esse nulla sapiente itaque doloribus obcaecati laboriosam tempore animi praesentium asperiores dolorum explicabo tenetur quod, similique deserunt tempora ratione fugit!</p>
+    <p>Temporibus totam dicta, eius, alias saepe corrupti excepturi suscipit odit quasi quibusdam veritatis nulla! Aut quod velit tempore voluptate cum, culpa quas. Veniam ullam, iure corporis perspiciatis magnam maxime delectus.</p>
+    <p>Rem quam expedita accusamus, doloribus inventore facere, error blanditiis, in quae fugit consequatur dolores accusantium esse illo adipisci sint autem molestias saepe. At harum ipsam, suscipit nemo labore perspiciatis minima.</p>
+    <p>Asperiores assumenda a veniam, beatae doloremque placeat quos deleniti ab quae numquam, magnam corporis soluta distinctio fugiat autem voluptatum repellendus. Nostrum neque maxime amet debitis suscipit autem nihil ea, eligendi.</p>
+    <p>Nesciunt ullam molestias harum ex iure quas deleniti rerum quis quidem, esse quaerat adipisci. Tenetur iste, modi dicta nesciunt hic. Esse facilis quis eius aspernatur iusto dolor aut quos est.</p>
+    <p>Eius enim inventore officia alias incidunt quis magni molestiae consectetur vel dolore cum quibusdam, itaque ipsam! Reprehenderit officiis numquam quisquam natus consequatur, voluptatem provident amet autem excepturi, quia culpa! Expedita.</p>
+    <p>Incidunt doloremque explicabo, harum! Autem omnis aspernatur, in ipsam reprehenderit adipisci provident ipsum voluptate optio quibusdam vel necessitatibus dignissimos repudiandae officiis cupiditate velit quo consequuntur eos mollitia deserunt nesciunt asperiores?</p>
+    <p>Aut modi repellat vel. Voluptatum perspiciatis, sit dignissimos quam quibusdam quasi consequuntur vitae vel officiis voluptatem suscipit sunt animi asperiores quidem, placeat ipsa odio consequatur minima nulla? Voluptatibus, voluptate, molestiae?</p>
+    <p>Explicabo magnam eos quibusdam reiciendis illum repudiandae eligendi fugiat dolor rerum adipisci natus vero eius obcaecati, quam, distinctio neque dolore dicta eaque suscipit numquam hic! Consectetur, aspernatur vel reiciendis quisquam.</p>
+    <p>Voluptatem totam tenetur sunt harum ratione neque eius vero, dolorum exercitationem nesciunt accusamus veritatis, quod laborum ab error debitis reiciendis quibusdam repudiandae distinctio. Eius, perspiciatis fuga quis autem, excepturi aliquam.</p>
+    <p>Quis necessitatibus labore voluptatibus, recusandae quaerat odio atque sed ipsam est assumenda tenetur iste quam similique unde ullam illum, nisi iusto dignissimos saepe eligendi ab impedit cum corporis! Tenetur, possimus.</p>
+    <p>Sapiente aut eveniet, officia, sed unde natus id explicabo perspiciatis, ad ratione fuga? Maxime eaque, ipsa dolorem velit numquam, sit magni error nisi eveniet, fugiat magnam dicta accusamus nulla repellendus?</p>
+    <p>Sint repudiandae unde labore cumque blanditiis soluta, porro culpa. Dolor placeat, nemo earum aspernatur alias quas vero adipisci, temporibus, sint maiores pariatur debitis dolorem, atque soluta doloribus est sequi quae!</p>
+    <p>Ut amet vero ipsam cumque, nihil sequi pariatur repellendus tempora eaque laborum libero voluptas ex facere exercitationem consequuntur, possimus natus tempore quod quos. Libero consequatur omnis laudantium impedit, sed assumenda.</p>
+    <p>Pariatur nisi quia, iure vero voluptatum ipsum eius, maiores blanditiis eaque molestias. Unde velit quis quas nulla totam possimus itaque dolore! Neque exercitationem, fugiat sapiente facilis repellat natus! Aspernatur, sequi!</p>
+    <p>Architecto voluptates natus pariatur quas labore earum assumenda, provident suscipit fugiat! Blanditiis, adipisci autem soluta. Fugit iure ea, consequatur repellat in molestias illo nesciunt. Dolorum repudiandae placeat ut labore eaque.</p>
+    <p>Dolores alias autem aspernatur odio nostrum, consequuntur, porro corporis aliquam cum officia? Repellendus aliquid minima rerum nisi. Explicabo, quia aliquam, deleniti magnam, sequi repellat doloremque veniam aut odio harum impedit.</p>
+    <p>Reiciendis voluptatem blanditiis modi pariatur, laudantium libero molestiae. Facilis tempora esse suscipit iste nam error, voluptatum quod hic laudantium deleniti, sint dolorem quam expedita culpa aut ab excepturi accusamus voluptates.</p>
+
+  </div>
 
 </body>
 </html>
