--- a/12-backbone/zoo/index.html
+++ b/12-backbone/zoo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Backbone Zoo</title>
   <link rel="stylesheet" href="css/zoo.css">
 </head>
 <body>
