Finished off threejs demo

--- a/11-advanced/threejs/index.html
+++ b/11-advanced/threejs/index.html
@@ -9,6 +9,7 @@
 <body>
 
   <div id="output"></div>
+  <div id="stats"></div>
 
   <script src="js/three.js"></script>
   <script src="js/datGui.js"></script>
