--- a/0x-bonus/angular/angular-demo/index.html
+++ b/0x-bonus/angular/angular-demo/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-  <div ng-app="fuckup" ng-controller="InvoiceController as invoice">
+  <div ng-app="invoice1" ng-controller="InvoiceController as invoice">
     <b>Invoice:</b>
     <div>
       Quantity: <input type="number" min="0" ng-model="invoice.qty">
